<resources>
    <string name="app_name">TalkBrancer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="people_num">人</string>
    <string name="rule">このアプリは飲み会などでいよいよ話すことがなくなってきたときに、無理やりにでも会話を繋げることに重宝するアプリです\n</string>
    <string name="turn1">最初に人数を設定します。今回はYugiさんとJohnoさんとHondaさんの3人でアプリを使うとします</string>
    <string name="turn2">順番に<font color="#ff6666">「名前」</font>　<font color="#66ff66">「語りたい or 語り合いたい話」</font>　<font color="#6666ff">「誰かに聞きたい話や話題」</font>をざっくり入力します</string>
    <string name="turn2ex">例\n
        <font color="#ff6666">Yugi</font>
        <font color="#66ff66">一番エロいと思うジャンプのキャラ（語り合いたい）</font>
        <font color="#6666ff">好きな異性のタイプ \n</font>
        <font color="#ff6666">Johno</font>
        <font color="#66ff66">就活の愚痴話（語り合いたい）</font>
        <font color="#6666ff">就活の苦労話\n</font>
        <font color="#ff6666">Honda</font>
        <font color="#66ff66">カニカマの魅力（語りたい）</font>　
        <font color="#6666ff">今年一番面白かった出来事</font>
    </string>
    <string name="turn3">全員2番を提出しおわったら、ランダムで\nA．みんなに語りたい or 語り合いたい話題を提出者が話す時間\nB. 誰か一人が誰かに答えてほしい話題が誰かが答える時間\nのどちらかが出てきます</string>
    <string name="turn3ex">例として、「就活の苦労話ーHonda」と出たとします。\nこれは就活の苦労話をHondaさんが話すというターンです。上のBパターンに相当します</string>
    <string name="turn3attention"><font color="#ff4444">※この時、Hondaさんは就活の苦労話について話したくない場合、「パス」することが出来ます。</font></string>
    <string name="turn4">3番でパスするか話し終えたら、もう一度3番に戻り、AかBを満たすターンを行います。\nこれを気が済むまでくり返して話に花を咲かせてください</string>
    <string name="attention"><font color="#ff4444">※注</font>\n
        1. 会話をすることの強要はハラスメント行為です。話す方の「断る権利」を最優先してください\n
        2. 話してほしい内容をセットする場合、同時に周りの人が「話すことのできる」内容であるかどうかよく考えてください\n
        3. このアプリは誰がセットしたトピックか意図的にわからないようにしています。特定するような行為はトラブルの原因になる可能性もありますので慎重にお願いします。
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_edit_hint">会話に参加する人の名前</string>
    <string name="talk_theme">話題をひねり出してください！！</string>
    <string name="want_to_talk_theme_hint">あなたが語りたいこと</string>

    <string name="want_you_to_talk_theme_hint">語ってほしいこと</string>
    <string name="talk_form_attention_text">※いい話題が見つからなかった場合\n 空のままにしてください</string>
    <string name="something">だれかに</string>
    <string name="with_all">みんなと</string>
    <string name="to_all">みんなに</string>
    <string name="next_user">次の人へ</string>
    <string name="next_game">次のゲームへ</string>
    <string name="san">さん</string>
    <string name="want_to_talk_turn">について語りたい！</string>
    <string name="want_to_talk_with_our_turn">についてみんなで語り合いたい！</string>
    <string name="someone_talk_turn">について話す！</string>

</resources>