<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.example.talkbrancer.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/shape">
        <TextView
            android:id="@+id/talk_theme_user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="森田森田森田森田森田　さん"
            android:layout_margin="20dp"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/talk_theme_recommend_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talk_theme"
            android:textSize="21sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/talk_theme_user_text"
            app:layout_constraintStart_toStartOf="@id/talk_theme_user_text" />
        <EditText
            android:id="@+id/want_to_talk_edit"
            android:layout_width="wrap_content"
            android:text=""
            android:inputType="text"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/talk_theme_recommend_text"
            app:layout_constraintStart_toStartOf="@+id/talk_theme_recommend_text"
            android:hint="@string/want_to_talk_theme_hint"
            android:layout_height="wrap_content" />
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="みんなと"
            app:layout_constraintStart_toEndOf="@+id/want_to_talk_edit"
            app:layout_constraintTop_toTopOf="@+id/want_to_talk_edit"
            app:layout_constraintBottom_toBottomOf="@+id/want_to_talk_edit" />
        <EditText
            android:id="@+id/want_you_to_talk_edit"
            android:layout_width="wrap_content"
            android:text=""
            android:inputType="text"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/want_to_talk_edit"
            app:layout_constraintStart_toStartOf="@+id/want_to_talk_edit"
            android:hint="@string/want_you_to_talk_theme_hint"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>